--- a/ion1trim1/src/app/home/home.page.html
+++ b/ion1trim1/src/app/home/home.page.html
@@ -22,6 +22,13 @@
     </ion-label>
     <ion-input type="password"></ion-input>
 </ion-item>
+
+<div>
+    <ion-button color="primary" size="block">
+      LOGIN
+    </ion-button>
+</div>
+
 </div>
 
 </ion-content>
