--- a/ion1trim1/src/app/home/home.page.html
+++ b/ion1trim1/src/app/home/home.page.html
@@ -13,19 +13,23 @@
         <ion-label position="floating">
           Login
         </ion-label>
-        <ion-input></ion-input>
+        <ion-input [(ngModel)] = "login"></ion-input>
     </ion-item>
 
   <ion-item>
     <ion-label position="floating">
       Senha
     </ion-label>
-    <ion-input type="password"></ion-input>
+    <ion-input type="password" [(ngModel)] = "senha"></ion-input>
 </ion-item>
 
 <div>
-    <ion-button color="primary" size="block">
-      LOGIN
+  {{ mensagem }}
+</div>
+
+<div>
+    <ion-button color="primary" expand="block" (click)="validar()">
+      ENTRAR
     </ion-button>
 </div>
 
