--- a/ion1trim1/src/app/home/home.page.html
+++ b/ion1trim1/src/app/home/home.page.html
@@ -1,38 +1,60 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      NUBANKO
+      CALCULADORA
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
 
-  <div id="container">
+<div id="container">
     <ion-item>
         <ion-label position="floating">
-          Login
+          Número 1
         </ion-label>
-        <ion-input [(ngModel)] = "login"></ion-input>
+        <ion-input type = "number" [(ngModel)]="n1"></ion-input>
     </ion-item>
 
-  <ion-item>
-    <ion-label position="floating">
-      Senha
-    </ion-label>
-    <ion-input type="password" [(ngModel)] = "senha"></ion-input>
-</ion-item>
+    <ion-item>
+        <ion-label position="floating">
+          Número 2
+        </ion-label>
+        <ion-input type = "number" [(ngModel)]="n2"></ion-input>
+    </ion-item>
 
-<div>
-  {{ mensagem }}
-</div>
+    <div>
+      <ion-button color="primary" expand="block" (click)="somar()">
+        Somar
+      </ion-button>
+    </div>
 
-<div>
-    <ion-button color="primary" expand="block" (click)="validar()">
-      ENTRAR
-    </ion-button>
-</div>
+    <div>
+      <ion-button color="dark" expand="block" (click)="subtrair()">
+        Subtrair
+      </ion-button>
+    </div>
 
+    <div>
+      <ion-button color="danger" expand="block">
+        Multiplicar
+      </ion-button>
+    </div>
+
+    <div>
+      <ion-button color="warning" expand="block">
+        Dividir
+      </ion-button>
+    </div>
+
+    <div>
+        <ion-item>
+          <ion-label position="stacked">
+            Resposta
+          </ion-label>
+      <ion-input readonly value="{{resposta}}"></ion-input>
+      </ion-item>
+    </div>
 </div>
 
 </ion-content>
